--- a/PasswordGenerator/PasswordGenerator.csproj
+++ b/PasswordGenerator/PasswordGenerator.csproj
@@ -67,14 +67,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="PasswordGenerator.xaml">
+    <Page Include="PasswordGen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PasswordGenerator.xaml.cs">
-      <DependentUpon>PasswordGenerator.xaml</DependentUpon>
+    <Compile Include="PasswordGen.xaml.cs">
+      <DependentUpon>PasswordGen.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
