Working on delete check box

--- a/PasswordGenerator/PasswordGenerator.csproj
+++ b/PasswordGenerator/PasswordGenerator.csproj
@@ -119,6 +119,10 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LoginManagerLogic\LoginManagerLogic.csproj">
+      <Project>{d5136eb8-b99a-42c0-9107-2aa1cdfe2658}</Project>
+      <Name>LoginManagerLogic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PasswordLogic\PasswordLogic.csproj">
       <Project>{dd2f6ffd-e07d-4775-b5ac-db99613d4a4d}</Project>
       <Name>PasswordLogic</Name>
